# telekinesis

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Debug-Tests.ppj  Debug.ppj  README.md  Release.ppj  deploy-scripts-and-run.ps1  telekinesis.code-workspace  vcpkg-configuration.json  vcpkg.json
contrib/: Debug.ppj  Release.ppj
contrib/Distribution/: Telekinesis.esp
contrib/Distribution/SKSE/Plugins/Telekinesis/Patterns/: 00_Tease.vibrator.funscript  01_In_Out_3s.funscript  01_Slow-Tease.vibrator.funscript  02_Cruel-Tease.vibrator.funscript  11_Sine.vibrator.funscript  12_Sine-Fast.vibrator.funscript  15_Sawtooth.vibrator.funscript  16_Sawtooth-High-And-Fast.vibrator.funscript  17_Sawtooth-Low-And-Slow.vibrator.funscript  20_On-Off.vibrator.funscript  21_On-Off-Slow.vibrator.funscript  22_On-Off-Fast.vibrator.funscript  30_Sawtooth.vibrator.funscript  31_Sawtooth-Fast.vibrator.funscript  31_Square-Mid-Weak.vibrator.funscript  35_On-Off.vibrator.funscript  36_On-Off-Fast.vibrator.funscript  61_In_Out_Full.funscript  62_In_Out_Half.funscript  63_In_Out_Quarter.funscript  64_In_Out_Random.funscript
contrib/Distribution/Source/Scripts/: TK_Telekinesis.psc  Tele.psc  Tele_Api.psc  Tele_Devices.psc  Tele_Integration.psc  Tele_MCM.psc  Tele_OnGameLoadObserver.psc  Tele_SpellEffectStop.psc  Tele_SpellVibrateEffectChannel.psc
contrib/Test/: TelekinesisTest.esp
contrib/Test/Source/Scripts/: TK_Test_DDVibrateEventObserver.psc  TK_Test_OnPlayerLoadGameObserver.psc  TK_Test_SpellVibrateEffect.psc
deploy/: Debug.ppj  Release.ppj
deploy/Data/SKSE/Plugins/Telekinesis/Patterns/: 61_Deepthroat.funscript
deploy/Data/Source/Scripts/: Tele_Api.psc  Tele_Devices.psc  Tele_Integration.psc  Tele_MCM.psc  Tele_OnGameLoadObserver.psc
deploy/Distribution/SKSE/Plugins/Telekinesis/Patterns/: 01_Tease.vibrator.funscript  03_Wub-Wub-Wub.vibrator.funscript  40_Square.vibrator.funscript  60_Blowjob.funscript
deploy/Distribution/Source/Scripts/: Tele_Api.psc  Tele_SpellVibrateEffectChannel.psc
deploy/Test/Source/Scripts/: TK_Test_OnPlayerLoadGameObserver.psc
doc/: 1-Setup.md  2-VirtualSex.md  3-VirtualToys.md  4-SetUpBodyParts.md  5- Funscripts.md  6-Debugging.md  Backlog.md  Manual.md
plug/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
plug/bp_fakes/src/: lib.rs
plug/bp_scheduler/: Cargo.toml
plug/bp_scheduler/src/: lib.rs  player.rs  speed.rs  worker.rs
plug/include/: api.h  telekinesis_plug.h
plug/src/: api.cc  api.rs  commands.rs  connection.rs  event.rs  fakes.rs  input.rs  inputs.rs  lib.rs  logging.rs  papyrus.rs  pattern.rs  settings.rs  telekinesis.rs  tests.rs  tests_int.rs  util.rs
plug/tele/: Cargo.toml
plug/tele/src/: api.rs  connection.rs  telekinesis.rs
plug/tests/: e2e.rs  e2e_ffi.rs
rust/: .gitignore  Cargo.toml  deploy-scripts-and-run.ps1
rust/bp_actions/: Cargo.toml
rust/bp_actions/src/: actions.rs  connection.rs  input.rs  lib.rs  settings.rs  status.rs  telekinesis.rs
rust/bp_fakes/: Cargo.toml
rust/bp_fakes/src/: lib.rs
rust/bp_scheduler/: Cargo.toml
rust/bp_scheduler/src/: access.rs  actuator.rs  lib.rs  player.rs  settings.rs  speed.rs  worker.rs
rust/tele/: Cargo.toml  build.rs
rust/tele/src/: api.rs  connection.rs  input.rs  lib.rs  logging.rs  pattern.rs  settings.rs  status.rs  telekinesis.rs
rust/tele_common/: Cargo.toml
rust/tele_common/src/: api.rs  connection.rs  input.rs  lib.rs  settings.rs  status.rs  telekinesis.rs
src/: Config.cpp  Config.h  Logging.cpp  Logging.h  Main.cpp  PCH.h  Papyrus.cpp  Papyrus.h  Plugin.cpp  Plugin.h
test/: Telekinesis.Int.cpp  Telekinesis.Unit.cpp  Telekinesis.h
