[package]
name = "telekinesis_plug"
version = "0.2.0"
edition = "2021"

[lib]
name = "telekinesis_plug"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.68"
buttplug = "6.2.2"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
lazy_static = "1.4.0"
nonparallel = "0.1.0"

[build-dependencies]
cbindgen = "0.20.0"
