[package]
name = "plug"
version = "0.3.0"
edition = "2021"

[lib]
name = "telekinesis_plug"
crate-type = ["staticlib", "rlib"]

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.68"
buttplug = "7.1.0"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
cxx = "1.0.95"
tokio-test = "0.4.2"
serde = "1.0.164"
serde_json = "1.0.99"

[dev-dependencies]
nonparallel = "0.1.0"
tempfile = "3.7.0"

[build-dependencies]
cxx-build = "1.0"
