[package]
name = "bp_actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = " 0.5.1"
tracing = "0.1.37"
funscript = "0.5.3"
anyhow = "1.0.68"
tokio = { version = "1.23.0", features = ["full", "sync"] }
cxx = "1.0.95"
serde = "1.0.164"
serde_json = "1.0.99"
buttplug = "7.1.13"
futures = "0.3.25"
bp_scheduler = { path = "../bp_scheduler" }
itertools = "0.11.0"

[dev-dependencies]
bp_fakes = { path = "../bp_fakes" }
tokio-test = "0.4.2"
tempfile = "3.7.0"
