[package]
name = "bp_fakes"
version = "0.1.0"
edition = "2021"
description = "Fake buttplug server for testing device access"

[dependencies]
buttplug = "7.1.13"
tokio = { version = "1.23.0", features = ["full", "sync"] }
tokio-util = "0.7.8"
serde = "1.0.164"
serde_json = "1.0.99"
tracing = "0.1.37"
futures = "0.3.25"
assert_float_eq = "1.1.3"

[dev-dependencies]
tracing-subscriber = "0.3.16"