[package]
name = "plug"
version = "1.2.1"
edition = "2021"

[lib]
name = "telekinesis_plug"
crate-type = ["staticlib", "rlib"]

[dependencies]
bp_actions = { path = "../bp_actions" }
bp_scheduler = { path = "../bp_scheduler" }
bp_fakes = { path = "../bp_fakes", optional = true }
crossbeam-channel = " 0.5.1"
anyhow = "1.0.68"
buttplug = "7.1.13"
futures = "0.3.25"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
cxx = "1.0.95"
funscript = "0.5.3"
itertools = "0.11.0"

[dev-dependencies]
bp_fakes = { path = "../bp_fakes" }
nonparallel = "0.1.0"

[build-dependencies]
cxx-build = "1.0"

[features]
testing = ["dep:bp_fakes"] # support for test/demo connetion with fake devices 